--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -17,12 +17,9 @@ jobs:
           cache: true  # 自动缓存Go模块依赖
           cache-dependency-path: go.sum  # 根据go.sum变化更新缓存
 
-      # - name: Cache ProjectDiscovery tools  # 新增：缓存二进制工具
-      #   uses: actions/cache@v3
-      #   id: tool-cache
-      #   with:
-      #     path: ${{ env.GOPATH }}/bin  # 缓存Go安装的二进制文件
-      #     key: ${{ runner.os }}-pd-tools-${{ hashFiles('**/go.mod') }}
+      - name: Debug go.mod
+        run: ls -lah **/go.mod
+        
       - name: Cache ProjectDiscovery tools
         uses: actions/cache@v3
         id: tool-cache
@@ -34,7 +31,7 @@ jobs:
             /home/runner/go/bin/httpx
             /home/runner/go/bin/gau
             /home/runner/go/bin/waybackurls
-          key: ${{ runner.os }}-pd-tools-${{ hashFiles('**/go.mod') }}
+          key: ${{ runner.os }}-pd-tools-${{ hashFiles('/home/runner/go/bin') }}
           
       - name: Setup Dependencies
         run: sudo apt-get install -y libpcap-dev
@@ -86,7 +83,7 @@ jobs:
           ##cat naabu.txt | waybackurls | tee way_urls.txt
           
           cat active_urls.txt | gau --subs --blacklist png,jpg,gif,css --o ga_urls.txt
-          cat active_urls.txt | waybackurls > way_urls.txt | tee -a ga_urls.txt
+          cat active_urls.txt | waybackurls > way_urls.txt | tee -a all_urls.txt
           #sort -u ga_urls.txt
 
       - name: Running NucleiFuzing for vulnerability assessment
