--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -15,7 +15,7 @@ jobs:
         with:
           go-version: 1.24.4
           cache: true  # 自动缓存Go模块依赖
-          cache-dependency-path: go.sum  # 根据go.sum变化更新缓存
+          cache-dependency-path: go.bin  # 根据go.sum变化更新缓存
         
       - name: Cache ProjectDiscovery tools
         uses: actions/cache@v3
@@ -80,9 +80,11 @@ jobs:
           ##cat naabu.txt | waybackurls | tee way_urls.txt
           
           cat active_urls.txt | gau --subs --blacklist png,jpg,gif,css --o ga_urls.txt
-          cat active_urls.txt | waybackurls > way_urls.txt | tee -a all_urls.txt
-          #sort -u ga_urls.txt
-
+          cat active_urls.txt | waybackurls > way_urls.txt
+          if [ $(wc -l < ga_urls.txt) -le 20000 ] && [ $(wc -l < way_urls.txt) -le 20000 ]; then
+            sort -u ga_urls.txt way_urls.txt -o all_urls.txt
+          fi
+          
       - name: Running NucleiFuzing for vulnerability assessment
         continue-on-error: true
         timeout-minutes: 340
@@ -98,8 +100,8 @@ jobs:
           git add *.txt
       - name: Commit results to Github
         run: |
-          git config --local user.email "admin@kylin.org"
-          git config --global user.name "kylin-team"
+          git config --local user.email "admin@fuck.org"
+          git config --global user.name "fukin-team"
           git commit -m "InCloud Report" -a --allow-empty
       - name: Push changes
         uses: ad-m/github-push-action@master
