--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -16,14 +16,7 @@ jobs:
           go-version: 1.24.4
           cache: true  # 自动缓存Go模块依赖
           cache-dependency-path: go.bin  # 根据go.sum变化更新缓存
-        
-      - name: Cache ProjectDiscovery tools
-        uses: actions/cache@v3
-        id: tool-cache
-        with:
-          path: /home/runner/go/bin/
-          key: ${{ runner.os }}-pd-tools-${{ hashFiles('/home/runner/go/bin/**') }}
-
+          
       - name: Setup Dependencies
         run: sudo apt-get install -y libpcap-dev
 
@@ -42,6 +35,15 @@ jobs:
           go install -v github.com/projectdiscovery/mapcidr/cmd/mapcidr@latest
         shell: bash
 
+
+      - name: Cache ProjectDiscovery tools
+        uses: actions/cache@v3
+        id: tool-cache
+        with:
+          path: /home/runner/go/bin
+          key: ${{ runner.os }}-pd-tools-V1
+          # key: ${{ runner.os }}-pd-tools-${{ hashFiles('/home/runner/go/bin/**') }}
+
       - name: Add Go bin to PATH  # 确保工具可被后续步骤访问
         run: echo "$GOPATH/bin" >> $GITHUB_PATH
 
@@ -51,8 +53,8 @@ jobs:
         run: |
           rm -rf *_*.txt
           subfinder -dL domains.txt -config config/subfinder-config.yaml | dnsx -t 350 -o active_subdomains.txt
-          # dnsx -l active_subdomains.txt -t 350 | tee -a active_subdomains.txt
-          # sort -u active_subdomains.txt     
+          dnsx -l active_subdomains.txt -t 350 | tee -a active_subdomains.txt
+          sort -u active_subdomains.txt     
         shell: bash
 
 
@@ -74,9 +76,11 @@ jobs:
           #naabu -l passive_subdomains.txt -p 1-65535 -c 2000 | tee naabu.txt
           #naabu -l passive_subdomains.txt -tp 1000 -c 3000 | tee naabu.txt
           ##cat naabu.txt | waybackurls | tee way_urls.txt
+
+          naabu -l active_urls.txt -p 1-65535 -c 2000 | httpx -title -t 230 | tee naa_port.txt
           
-          cat active_urls.txt | gau --subs --blacklist png,jpg,gif,css --o ga_urls.txt
-          cat active_urls.txt | waybackurls > way_urls.txt
+          cat naa_port.txt | gau --subs --blacklist png,jpg,gif,css --o ga_urls.txt
+          cat naa_port.txt | waybackurls > way_urls.txt
           if [ $(wc -l < ga_urls.txt) -le 20000 ] && [ $(wc -l < way_urls.txt) -le 20000 ]; then
             sort -u ga_urls.txt way_urls.txt -o all_urls.txt
           fi
