--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -91,8 +91,8 @@ jobs:
         run: |
           nuclei -up && nuclei -ut
           git clone https://github.com/projectdiscovery/fuzzing-templates.git
-          nuclei -l ga_urls.txt -t fuzzing-templates/ -rl 50 -o fuzz_out.txt
-          nuclei -l ga_urls.txt -s medium, high, critical -rl 50 -o hig_out.txt
+          nuclei -l all_urls.txt -t fuzzing-templates/ -rl 50 -o fuzz_out.txt
+          nuclei -l all_urls.txt -s medium, high, critical -rl 50 -o hig_out.txt
           
         shell: bash
 
