--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.24.4
-          cache: true  # 自动缓存Go模块依赖
+          cache: true 
           cache-dependency-path: go.bin  # 根据go.sum变化更新缓存
           
       - name: Setup Dependencies
@@ -58,13 +58,13 @@ jobs:
         shell: bash
 
 
-      - name: Running httpx for HTTP webservers probbing
-        run: |
-
-           httpx -l active_subdomains.txt -mc 100,101,200,201,204,301,302,304,400,403,404,500,502,503 -p 1-65535 -t 13000 | tee active_urls.txt
-           # httpx -l active_subdomains.txt -mc 100,101,200,201,204,301,302,304,400,403,404,500,502,503 -t 730 -o active_urls.txt
-           httpx -l active_subdomains.txt -title -t 230
-        shell: bash
+      # - name: Running httpx for HTTP webservers probbing
+      #   run: |
+      #      # httpx -l active_subdomains.txt -mc 100,101,200,201,204,301,302,304,400,403,404,500,502,503 -p 1-65535 -t 13000 | tee active_urls.txt
+           
+      #      # httpx -l active_subdomains.txt -mc 100,101,200,201,204,301,302,304,400,403,404,500,502,503 -t 730 -o active_urls.txt
+      #      # httpx -l active_subdomains.txt -title -t 230
+      #   shell: bash
 
       - name: Running way/gau for getting all urls...
         continue-on-error: true
@@ -77,13 +77,15 @@ jobs:
           #naabu -l passive_subdomains.txt -tp 1000 -c 3000 | tee naabu.txt
           ##cat naabu.txt | waybackurls | tee way_urls.txt
 
-          # naabu -l active_urls.txt -p 1-65535 -c 20000 | httpx -title -t 230 | tee naa_port.txt
+          naabu -l active_subdomains.txt -p 1-65535 -c 2000 -rate 30000  | tee active_urls.txt
           
           cat active_urls.txt | gau --subs --blacklist png,jpg,gif,css --o ga_urls.txt
           cat active_urls.txt | waybackurls > way_urls.txt
           if [ $(wc -l < ga_urls.txt) -le 20000 ] && [ $(wc -l < way_urls.txt) -le 20000 ]; then
-            sort -u ga_urls.txt way_urls.txt -o all_urls.txt
+            sort -u ga_urls.txt way_urls.txt -o all_url.txt
           fi
+
+          httpx -l all_url.txt -mc 100,101,200,201,204,301,302,304,400,403,404,500,502,503 -p 1-65535 -t 13000 | tee active_urls.txt
           
       - name: Running NucleiFuzing for vulnerability assessment
         continue-on-error: true
@@ -111,15 +113,3 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.ref }}
 
-
-
-      # - name: Pull remote changes before push
-      #   run: |
-      #     git config pull.rebase true  # 启用变基模式避免多余合并提交
-      #     git pull origin ${{ github.ref_name }}  # 动态获取当前分支名
-      
-      # - name: Push changes
-      #   uses: ad-m/github-push-action@master
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     branch: ${{ github.ref_name }}
