--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -82,10 +82,10 @@ jobs:
           cat active_urls.txt | gau --subs --blacklist png,jpg,gif,css --o ga_urls.txt
           cat active_urls.txt | waybackurls > way_urls.txt
           if [ $(wc -l < ga_urls.txt) -le 20000 ] && [ $(wc -l < way_urls.txt) -le 20000 ]; then
-            sort -u ga_urls.txt way_urls.txt -o all_url.txt
+            sort -u ga_urls.txt way_urls.txt -o all_urls.txt
           fi
 
-          httpx -l all_url.txt -mc 100,101,200,201,204,301,302,304,400,403,404,500,502,503 -p 1-65535 -t 13000 | tee active_urls.txt
+          httpx -l all_urls.txt -mc 100,101,200,201,204,301,302,304,400,403,404,500,502,503 -t 13000 | tee http_urls.txt
           
       - name: Running NucleiFuzing for vulnerability assessment
         continue-on-error: true
