--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -15,10 +15,10 @@ jobs:
         with:
           go-version: 1.24.4
           cache: true 
-          cache-dependency-path: go.bin  # 根据go.sum变化更新缓存
+          cache-dependency-path: go.bin  
           
       - name: Setup Dependencies
-        run: sudo apt-get install -y libpcap-dev
+        run: sudo apt update && sudo apt-get install -y libpcap-dev gcc make git masscan
 
       - name: Cache ProjectDiscovery tools
         uses: actions/cache@v3
