--- a/.github/workflows/TNT.yaml
+++ b/.github/workflows/TNT.yaml
@@ -77,7 +77,8 @@ jobs:
           #naabu -l passive_subdomains.txt -tp 1000 -c 3000 | tee naabu.txt
           ##cat naabu.txt | waybackurls | tee way_urls.txt
 
-          naabu -l active_subdomains.txt -p 1-65535 -c 2000 -rate 30000  | tee active_urls.txt
+          # naabu -l active_subdomains.txt -tp 1-65535 -c 2000 -rate 30000  | tee active_urls.txt
+          naabu -l active_subdomains.txt -tp 1000 -c 2000 -rate 30000  | tee active_urls.txt
           
           cat active_urls.txt | gau --subs --blacklist png,jpg,gif,css --o ga_urls.txt
           cat active_urls.txt | waybackurls > way_urls.txt
@@ -93,8 +94,8 @@ jobs:
         run: |
           nuclei -up && nuclei -ut
           git clone https://github.com/projectdiscovery/fuzzing-templates.git
-          nuclei -l all_urls.txt -t fuzzing-templates/ -rl 50 -o fuzz_out.txt
-          nuclei -l all_urls.txt -s medium, high, critical -rl 50 -o hig_out.txt
+          nuclei -l all_urls.txt -it fuzzing-templates/ -rl 500 -o fuzz_out.txt
+          nuclei -l all_urls.txt -s medium, high, critical -rl 500 -o hig_out.txt
           
         shell: bash
 
@@ -105,7 +106,7 @@ jobs:
         continue-on-error: true
         run: |
           git config --local user.email "admin@inbug.org"
-          git config --global user.name "inbug-team"
+          git config --global user.name "fuck-team"
           git commit -m "Fuck Report" -a --allow-empty
       - name: Push changes
         uses: ad-m/github-push-action@master
